# compliancedrift

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
demos/: README.md
demos/01-k8s-pod-security/: SCENARIO.md  baseline.json  baseline.signed.json  current.json
demos/02-postgres-hardening/: SCENARIO.md  baseline.json  baseline.signed.json  current.json
demos/03-s3-bucket-policy/: SCENARIO.md  baseline.json  baseline.signed.json  current.json
demos/04-nginx-tls/: SCENARIO.md  baseline.json  baseline.signed.json  current.json
demos/05-sshd-config/: SCENARIO.md  baseline.json  baseline.signed.json  current.json
demos/06-terraform-securitygroup/: SCENARIO.md  baseline.json  baseline.signed.json  current.json
demos/07-docker-daemon-cis/: SCENARIO.md  baseline.json  baseline.signed.json  current.json  ignore.txt
demos/08-feature-flags-noise/: SCENARIO.md  baseline.json  baseline.signed.json  current.json  ignore.txt
demos/09-rbac-roles/: SCENARIO.md  baseline.json  baseline.signed.json  current.json
demos/10-firewall-egress/: SCENARIO.md  baseline.json  baseline.signed.json  current.json
examples/: baseline-config.json  drifted-config.json  help.txt  ignore.txt  version.txt
src/compliancedrift/: __init__.py  baseline.py  cli.py  diff.py  digest.py  ignore.py  sarif.py
tests/: test_baseline.py  test_cli.py  test_demos.py  test_diff.py  test_ignore.py  test_sarif.py
