[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cognis-compliancedrift"
version = "0.1.0"
description = "Configuration/compliance drift detector with signed baselines and a CI drift gate."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Cognis Digital" }]
maintainers = [{ name = "Cognis Digital" }]
keywords = ["compliance", "drift", "configuration", "security", "audit", "ci", "baseline"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/cognis-digital/compliancedrift"
Repository = "https://github.com/cognis-digital/compliancedrift"

[project.scripts]
compliancedrift = "compliancedrift.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
compliancedrift = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
